[gd_scene load_steps=6 format=3 uid="uid://ndwe8omip53i"]

[ext_resource type="Theme" uid="uid://c55lhrkiw4ysq" path="res://7.UI/Theme/AzyrTheme.tres" id="1_6e6hy"]
[ext_resource type="StyleBox" uid="uid://crpci47t7tqbd" path="res://7.UI/Theme/panel_plat_black.tres" id="2_8dc38"]
[ext_resource type="Script" uid="uid://c2bescy5r5euv" path="res://7.UI/GUI/3.PauseMenu/pause_menu_gui.gd" id="2_8q0p2"]

[sub_resource type="LabelSettings" id="LabelSettings_gm5af"]
font_size = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ne8if"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
shadow_size = 16
anti_aliasing = false

[node name="PauseMenuGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6e6hy")
script = ExtResource("2_8q0p2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6e6hy")
theme_override_styles/panel = ExtResource("2_8dc38")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(128, 86)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 42
text = "Paused"
label_settings = SubResource("LabelSettings_gm5af")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 4
text = "Resume"

[node name="Respawn" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 4
text = "Respawn "

[node name="SettingButton" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 4
text = "Settings"

[node name="GoToStartScreenButton" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 4
text = "Quit to Menu"

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(128, 86)
layout_mode = 2

[node name="QuitWarning" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ne8if")

[node name="VBoxContainer" type="VBoxContainer" parent="QuitWarning"]
layout_mode = 2

[node name="Label2" type="Label" parent="QuitWarning/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "WARNING"
horizontal_alignment = 1

[node name="Label" type="Label" parent="QuitWarning/VBoxContainer"]
layout_mode = 2
text = "Progress will not be saved."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="QuitWarning/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="CancelQuit" type="Button" parent="QuitWarning/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../ConfirmQuit")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../ConfirmQuit")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../ConfirmQuit")
focus_previous = NodePath("../ConfirmQuit")
text = "Return to Game"

[node name="ConfirmQuit" type="Button" parent="QuitWarning/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../CancelQuit")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../CancelQuit")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../CancelQuit")
focus_previous = NodePath("../CancelQuit")
text = "Quit to Menu"

[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/VBoxContainer/Respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/VBoxContainer/SettingButton" to="." method="_on_setting_button_button_up"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/VBoxContainer/VBoxContainer/GoToStartScreenButton" to="." method="_on_go_to_start_screen_button_button_up"]
[connection signal="pressed" from="QuitWarning/VBoxContainer/HBoxContainer/CancelQuit" to="." method="_on_cancel_quit_pressed"]
[connection signal="pressed" from="QuitWarning/VBoxContainer/HBoxContainer/ConfirmQuit" to="." method="_on_confirm_quit_pressed"]
